@startuml

title __CONTROLLERS's Class Diagram__\n

  namespace learningapp {
    namespace controllers {
      class learningapp.controllers.NotificationController {
          + NotificationController()
          + getNotifications()
      }
    }
  }
  

  namespace learningapp {
    namespace controllers {
      class learningapp.controllers.ProfessorController {
          + ProfessorController()
          + getAllQuestions()
      }
    }
  }
  

  namespace learningapp {
    namespace controllers {
      class learningapp.controllers.QuestionController {
          + QuestionController()
          + createQuestion()
          + getAllPendingQuestionsByTopic()
          + getNotificationsCount()
          + getQuestion()
          + updateQuestion()
          + validateQuestion()
      }
    }
  }
  

  namespace learningapp {
    namespace controllers {
      class learningapp.controllers.StudentController {
          + StudentController()
          + getAllQuestions()
      }
    }
  }
  

  namespace learningapp {
    namespace controllers {
      class learningapp.controllers.SubjectController {
          + SubjectController()
          + addSubject()
          + addTopicToSubject()
          + getAllSubjects()
          + getSubject()
          + updateSubject()
      }
    }
  }
  

  namespace learningapp {
    namespace controllers {
      class learningapp.controllers.TestController {
          + TestController()
          + addTest()
          + getTest()
          + getTestDifficulties()
          + getTests()
          + gradeTest()
      }
    }
  }
  

  namespace learningapp {
    namespace controllers {
      class learningapp.controllers.UserController {
          {static} - log : Logger
          + UserController()
          + getUser()
          + login()
          + updateUser()
          + validatePassword()
      }
    }
  }
  

  learningapp.controllers.NotificationController .up.|> learningapp.apis.NotificationApi
  learningapp.controllers.NotificationController o-- learningapp.services.NotificationService : notificationService
  learningapp.controllers.ProfessorController .up.|> learningapp.apis.ProfessorApi
  learningapp.controllers.ProfessorController o-- learningapp.services.QuestionService : questionService
  learningapp.controllers.QuestionController .up.|> learningapp.apis.QuestionApi
  learningapp.controllers.QuestionController o-- learningapp.manager.NotificationManager : notificationManager
  learningapp.controllers.QuestionController o-- learningapp.services.QuestionService : questionService
  learningapp.controllers.StudentController .up.|> learningapp.apis.StudentApi
  learningapp.controllers.StudentController o-- learningapp.services.QuestionService : questionService
  learningapp.controllers.SubjectController .up.|> learningapp.apis.SubjectApi
  learningapp.controllers.SubjectController o-- learningapp.services.SubjectService : subjectService
  learningapp.controllers.TestController .up.|> learningapp.apis.TestApi
  learningapp.controllers.TestController o-- learningapp.services.TestService : testService
  learningapp.controllers.UserController .up.|> learningapp.apis.AuthenticationApi
  learningapp.controllers.UserController .up.|> learningapp.apis.UserApi
  learningapp.controllers.UserController o-- learningapp.services.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
